--- a/source-src/css/tags.scss
+++ b/source-src/css/tags.scss
@@ -104,7 +104,7 @@
 
 .archive-article-date {
     color: #999;
-    float: right;
+    width: 145px;
     time {
       line-height: 36px;
     }
